# DEVHelper

./: .gitmodules  CMakeLists.txt  README.md
QML/: BAHelperInterface.qml  DeviceSelectInterface.qml  InterfacesList.qml  LoadingInterface.qml  RCXHelperInterface.qml  main.qml
Resources/: qml.qrc
src/: CMakeLists.txt  dev_helper_application.cpp  dev_helper_application.h  main.cpp
src/lib/: CMakeLists.txt
src/lib/communication/: CMakeLists.txt
src/lib/communication/serial/: CMakeLists.txt
src/lib/communication/serial/q_serial/: CMakeLists.txt  q_serial.cpp  q_serial.h
src/lib/protos/: CMakeLists.txt
src/lib/protos/updater/: CMakeLists.txt
src/lib/protos/updater/ymodem/: CMakeLists.txt  ymodem.c  ymodem.h
src/lib/serial/: q_serial.cpp
src/lib/tasks/: CMakeLists.txt  task.hpp  tasks_queue.hpp
src/lib/util/: CMakeLists.txt
src/lib/util/crc_lib/: crc.c  crc.h
src/lib/util/time/: time.h
src/lib/util/time_lib/: time_lib.hpp
src/managers/: CMakeLists.txt  manager_collection.cpp  manager_collection.h
src/managers/link_manager/: CMakeLists.txt  link_manager.cpp  link_manager.h
src/managers/link_manager/link_interface/: link.cpp  link.h  link_configuration.cpp  link_configuration.h  serial_link.cpp  serial_link.h
src/managers/link_manager/proto_interface/: devlink2_proto.cpp  devlink2_proto.h  proto.h
src/managers/main_manager/: CMakeLists.txt  main_manager.cpp  main_manager.h
src/managers/parameters_manager/: CMakeLists.txt  aw_dev_params_def.h  parameters_manager.cpp  parameters_manager.h
src/managers/upgrade_manager/: CMakeLists.txt  upgrade_manager.cpp  upgrade_manager.h
ui/: CMakeLists.txt
ui/QML/: DevHelperInterface.qml  DeviceSelectInterface.qml  InterfacesList.qml  ParametersScrollList.qml  ScanLinksListInterface.qml  UAVHelperInterface.qml  main.qml
ui/Resources/: qml.qrc
